# LibRapidRust

./: .gitignore  .rustc_info.json  .rustdoc_fingerprint.json  Cargo.toml  FORMATRULES.md  all.html  citation.cff  readme.md
.github/workflows/: rust.yml
compression/: sidebar-items.js
compression/huffman/: fn.assign_codes.html  fn.get_root.html  fn.read_from_file.html  index.html
constants/: constant.GOLDENRATIO.html  constant.PI.html  sidebar-items.js
docs/: index.html  sidebar-items.js
docs/compression/: index.html
docs/compression/huffman/: fn.huffman_decode.html  fn.huffman_encode.html  fn.write_to_file.html  sidebar-items.js  struct.Node.html
docs/constants/: constant.E.html  constant.SQRT2.html  index.html
docs/rapidmath/: index.html  sidebar-items.js
rapidmath/: fn.map.html
src/: arithmetic.rs  benchmarks.rs  chem.rs  compression.rs  compsci.rs  constants.rs  lib.rs  main.rs  math.rs  rapidmath.rs  vectors.rs  vectors_unripe.rs
src/chem/: elements.rs
src/chem/elements/: pse.rs
src/compression/: huffman.rs
src/compsci/: colours.rs  compression.rs  dates.rs  general.rs  rapidlogging.rs  stringhelpers.rs  unit_conversion.rs
src/compsci/colours/: cmyk.rs  rgb.rs  rgba.rs
src/compsci/compression/: huffman.rs
src/math/: bigint.rs  complex.rs  constants.rs  equations.rs  fast_primes.rs  general.rs  matrices.rs  postfix.rs  primes.rs  rapidmath.rs  sets.rs  unit_conversion.rs  vectors.rs  ztheory.rs
src/math/constants/: f32.rs  f64.rs
src/math/equations/: linear.rs  points.rs  polynomial.rs  quadratic.rs
src/math/fast_primes/: fjprime32.rs  fjprime64.rs  primality.rs  primesieve.rs
src/math/general/: avg_impl.rs  avg_macros.rs
src/math/ratings/: mod.rs
src/math/ratings/dwz/: match.rs  p_match.rs  player.rs
src/math/ratings/elo/: match.rs  mod.rs  p_match.rs  player.rs
src/math/sets/: vec_sets.rs  wrapper_hash_sets.rs
src/rapidmath/: constants.rs  matrix.rs  rapidmath.rs  sets.rs
src/unit_tests/: tests.rs
src/vector/: vectors_unripe.rs
vectors_unripe/: index.html
