[package]
name         = "lib_rapid"
version      = "0.2.1-preview.2"
authors      = ["Maximilian 'NervousNullPtr' Schleicher <NervousNullPtr@librapid.org>", "Toby 'Pencilcaseman' Davis <pencilcaseman@librapid.org>"]
license      = "MIT"
description  = "LibRapid - a library specifically built for mathematical calculations and scientific applications."
homepage     = "http://librapid.org"
repository   = "https://github.com/LibRapid/LibRapidRust"
readme       = "readme.md"
keywords     = ["maths", "scientific", "beta", "computerscience", "compsci"]
categories   = ["mathematics", "science", "compression", "algorithms"]
edition      = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
bincode = "1.3.3"
serde   = { version = "1.0.130", features = ["derive"] }
chrono  = "0.4"